fix: rename dbus service

--- a/com.github.trifonovkv.themes-switcher.service
+++ b/com.github.trifonovkv.themes-switcher.service
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=com.kostrifon.ThemesSwitcher.service
+Name=com.github.trifonovkv.themes-switcher.service
 Exec=/usr/bin/env gjs /home/kos/dev/new/night_light_theme.js
