add: an uninstall rules

--- a/schemas/Makefile
+++ b/schemas/Makefile
@@ -10,3 +10,7 @@ clean :
 install : $(GSCHEMA)
 	$(INSTALL) $^ /usr/share/glib-2.0/schemas/$^
 	glib-compile-schemas $(SCHEMAS_PATH) 2> /dev/null
+
+uninstall : 
+	rm -f /usr/share/glib-2.0/schemas/$(GSCHEMA)
+	glib-compile-schemas $(SCHEMAS_PATH) 2> /dev/null
