--- a/settings/Makefile
+++ b/settings/Makefile
@@ -1,10 +1,10 @@
-INSTALL_DIR = $(bindir)/night-theme-settings
+INSTALL_DIR = $(BINDIR)/night-theme-settings
+NTS = $(BUILDDIR)/nts.sh
+TARGET_NTS = $(BINDIR)/nts.sh
 
-.PHONY : install install-settings install-nts clean
+.PHONY : install install-settings install-nts
 
-all :
-
-clean :
+all : $(NTS)
 
 install : install-settings install-nts
 
@@ -12,9 +12,15 @@ install-settings : NightThemeSettings.js NightThemeSettings.glade
 	mkdir -p $(INSTALL_DIR)
 	install $^ $(INSTALL_DIR)
 
-install-nts : nts.sh
-	install -m 755 $^ $(bindir)
+install-nts : $(NTS)
+	install -m 755 $^ $(TARGET_NTS)
 
 uninstall :
 	rm -rf $(INSTALL_DIR)
-	rm -f $(bindir)/nts.sh
+	rm -f $(TARGET_NTS)
+
+$(NTS) :
+	echo "#!/bin/sh" > $@
+	echo >> $@
+	echo cd $(INSTALL_DIR) >> $@
+	echo /usr/bin/env gjs NightThemeSettings.js >> $@
