add: dist rule to Makefile

--- a/schemas/Makefile
+++ b/schemas/Makefile
@@ -1,14 +1,14 @@
 .PHONY = all install
 
-SCHEMAS_PATH = /usr/share/glib-2.0/schemas
+SCHEMAS_PATH = $(DESTDIR)/usr/share/glib-2.0/schemas
 GSCHEMA = com.github.trifonovkv.themes-switcher.gschema.xml
 
 all :
 
 install : $(GSCHEMA)
-	$(INSTALL) $^ /usr/share/glib-2.0/schemas/$^
+	$(INSTALL) $^ $(SCHEMAS_PATH)/$^
 	glib-compile-schemas $(SCHEMAS_PATH) 2> /dev/null
 
 uninstall : 
-	rm -f /usr/share/glib-2.0/schemas/$(GSCHEMA)
+	rm -f $(SCHEMAS_PATH)/$(GSCHEMA)
 	glib-compile-schemas $(SCHEMAS_PATH) 2> /dev/null
