--- a/night-theme.in
+++ b/night-theme.in
@@ -1,5 +1,5 @@
 Name:           night-theme
-Version:        0.1
+Version:        VERSION
 Release:        1%{?dist}
 Summary:        This app switch GNOME theme between dark and light by day time.
 
